--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img class="header__logo-desktop" src="./img/nav-logo-desktop.png" alt="logo"> <!--desktop-->
             <form class="nav--container" >
                 <button type="submit" class="nav__search_lup">O</button>
-                <input class="nav__search" type="text" placeholder="Buscar producctos, marcas">
+                <input class="nav__search" type="text" placeholder="Buscar productos, marcas">
             </form>
             <button  class="button__nav--menu">
                 <i  class= "nav__menu fas fa-bars"></i>
